Uge 43 (1.7)/compiling_error.txt
C:\Users\Chrillebon\Documents\GitHub\c_language_tasks\Uge 43 (1.7)\timebomb.cpp: In function 'int main()':
C:\Users\Chrillebon\Documents\GitHub\c_language_tasks\Uge 43 (1.7)\timebomb.cpp:135:29: error: invalid type argument of unary '*' (have 'int')
       Result+=single * (10**i);
                             ^
